# Diabetes-Prediction-Model

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  k8s-deploy.yml  k8s_guide.md  main.py  monitor.py  predictions.jsonl  pyproject.toml  train.py
.github/: dependabot.yml
.github/workflows/: ci.yml  retrain.yml
requirements/: base.txt  dev.txt  train.txt
tests/: test_api.py
